docker-learn/kubernetes_files/gke-ingress/google-managed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cus-nginx-gm-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "client-test"
    networking.gke.io/managed-certificates: gm-clent-mcrt
    kubernetes.io/ingress.class: "gce" 
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
spec:
  rules:
  - host: autobilling.vibevaulttech.co.in
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cus-nginx-gm-svc
            port:
              number: 4000
